Pretty much done. Feature complete

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,20 @@
-.App {
+html {
   font-family: 'Montserrat', sans-serif;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+  margin: 0;
+  padding: 0;
+  font-weight: 300;
+}
+
+ol, ul {
+  list-style: none;
 }
 
 
@@ -12,11 +27,11 @@ header h1 {
   background-color: #131827;
   font-size: 38px;
   line-height: 38px;
-  font-weight: 300;
   margin: 0;
   padding: 20px;
   color: #eb7f00;
 }
+
 
 header img
 {
