--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -1,15 +1,13 @@
 @import './dimensions.scss';
 
-
-.container
-{
-    position: absolute;
-    bottom: $keyheight;
-    top: $headerHeight;
-    left: 0;
-    right: 0;
-    overflow-y: auto;
-    overflow-x: none;
-    padding-bottom: 30px;
-    background-color: #0b0f19
+.container {
+  position: absolute;
+  bottom: $keyheight;
+  top: $headerHeight;
+  left: 0;
+  right: 0;
+  overflow-y: auto;
+  overflow-x: none;
+  padding-bottom: 30px;
+  background-color: #0b0f19;
 }
